--- a/History.txt
+++ b/History.txt
@@ -1,2 +1,5 @@
-== 0.0.1 / 2008-08-13
-  * building gem
+== 0.0.3 / 2008-08-13
+  * renamed from textmate_rush -> rushmate
+
+== 0.0.2 / 2008-08-13
+  * first working gem installable version
