--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,8 @@
+== 0.0.7 / 2008-08-14
+  * added texts
+  * rename input -> user_input
+  * renamed select_from_array -> quick_menu_from_array
+
 == 0.0.6 / 2008-08-14
   * beginning adding hooks for collecting user input
 
